# snakes-on-a-plane

./: .env.sample  .gitignore  README.md  main.py  output.md  pyproject.toml  workflow.py  worklfow.py
samples/: flight_plan_frd.docx  flight_plans.csv  flight_plans.json
