[project]
name = "snakes-on-a-plane"
version = "0.1.0"
description = "prototype for parsing air canada files, eh"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deepagents>=0.4.12",
    "langchain>=1.2.13",
    "langchain-anthropic>=1.4.0",
    "langgraph>=1.1.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "tabulate>=0.10.0",
]